--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,16 @@ project(evolution_project)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined")
 add_compile_options(-Wall -Wextra -Wshadow)
 
-add_executable(main main.cpp)
+find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
+
+add_executable(evolution_project src/main.cpp)
+#add_executable(try try.cpp)
+
+include_directories(include)
+
+target_link_libraries(evolution_project sfml-graphics sfml-audio)
+#target_link_libraries(try sfml-graphics sfml-audio)
+
