--- a/hse_evolution_project.yml
+++ b/hse_evolution_project.yml
@@ -9,21 +9,21 @@ on:
 
 jobs:
   clang-format:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
     timeout-minutes: 2
     steps:
       - uses: actions/checkout@v2
       - run: clang-format --version
       - run: for file in $(find . -iname '*.cpp' -or -iname '*.h' -and -not -iname 'doctest.h' ); do diff -u <(cat "$file") <(clang-format "$file") || exit 1; done
   clang-tidy:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
     timeout-minutes: 2
     steps:
       - uses: actions/checkout@v2
       - run: clang-tidy --version
       - run: clang-tidy $(find . -path '*/CMakeFiles/*' -prune -or \( -iname '*.cpp' -or -iname '*.h' -and -not -iname 'doctest.h' \) -print)
   compile-run:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
     timeout-minutes: 3
     strategy:
       matrix:
