--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(${PROJECT_NAME}
 
 include_directories(include)
 
+set(SFML_STATIC_LIBRARIES TRUE)
 set (resources "${CMAKE_SOURCE_DIR}/resources")
 set (resources_target "${CMAKE_CURRENT_BINARY_DIR}/resources")
 add_custom_command(
@@ -43,4 +44,4 @@ add_custom_command(
         COMMENT "symbolic link resources folder from ${resources} => ${resources_target}"
 )
 
-#target_link_libraries(evolution_project sfml-graphics sfml-audio)
+target_link_libraries(evolution_project sfml-graphics sfml-audio)
