--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(evolution_project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
 
 #add_compile_options(-O3 -Wall -Werror -Wformat-security -Wignored-qualifiers -Winit-self
 #        -Wswitch-default -Wfloat-equal -Wshadow -Wpointer-arith -Wtype-limits -Wempty-body
@@ -13,6 +13,24 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined"
 add_compile_options(-O3)
 
 find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
+
+
+list(APPEND CMAKE_PREFIX_PATH "/opt/grpc" "/opt/protobuf")
+
+# Cmake find modules
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
+find_package(Protobuf REQUIRED)
+find_package(GRPC REQUIRED)
+
+set(PROTOS server/server.proto)
+
+set(PROTO_SRC_DIR proto-src)
+file(MAKE_DIRECTORY ${PROTO_SRC_DIR})
+include_directories(${PROTO_SRC_DIR})
+
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_SRC_DIR} ${PROTOS})
+grpc_generate_cpp(GRPC_SRCS GRPC_HDRS ${PROTO_SRC_DIR} ${PROTOS})
 
 
 include_directories(include)
@@ -35,7 +53,9 @@ add_executable(${PROJECT_NAME}
         source/cards.cpp
         source/start_windows.cpp
         source/properties.cpp
-        source/text_field.cpp source/settings.cpp)
+        source/text_field.cpp source/settings.cpp
+        ${PROTO_SRCS}
+        ${GRPC_SRCS})
 
 include_directories(include)
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
@@ -51,5 +71,9 @@ set(SFML_STATIC_LIBRARIES TRUE)
 #        COMMENT "symbolic link resources folder from ${resources} => ${resources_target}"
 #)
 
-target_link_libraries(evolution_project sfml-graphics sfml-audio resources)
+target_link_libraries(evolution_project sfml-graphics sfml-audio resources gRPC::grpc++_reflection
+        protobuf::libprotobuf)
+
+
+
 #target_link_libraries(evolution_project PRIVATE resources)
