--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
 #        -Wmissing-field-initializers -Wctor-dtor-privacy -Wnon-virtual-dtor
 #        -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Weffc++)
 
-#add_compile_options(-O3)
+add_compile_options(-O3)
 
 find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
 
 
-list(APPEND CMAKE_PREFIX_PATH "/opt/grpc" "/opt/protobuf")
+#list(APPEND CMAKE_PREFIX_PATH "/opt/grpc" "/opt/protobuf")
 
 # Cmake find modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
