--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,9 @@ add_executable(${PROJECT_NAME}
         source/cards.cpp
         source/start_windows.cpp
         source/properties.cpp
-        source/text_field.cpp source/settings.cpp)
+        source/text_field.cpp
+        source/settings.cpp
+        source/bot.cpp)
 
 include_directories(include)
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
